--- a/zmeventnotification/objectconfig.ini
+++ b/zmeventnotification/objectconfig.ini
@@ -385,14 +385,14 @@ disable_locks= no
 # Also see https://pyzm.readthedocs.io/en/latest/source/pyzm.html#pyzm.ml.detect_sequence.DetectSequence.detect_stream
 # Very important: Make sure final ending brace is indented 
 stream_sequence = {
-        'frame_strategy': 'most_models',
-        'frame_set': 'snapshot,alarm',
-        'contig_frames_before_error': 5,
-        'max_attempts': 3,
-        'sleep_between_attempts': 4,
+		'frame_strategy': 'most_models',
+		'frame_set': 'snapshot,alarm',
+		'contig_frames_before_error': 5,
+		'max_attempts': 3,
+		'sleep_between_attempts': 4,
 		'resize':800
 
-    }
+	}
 
 # Chain of ML models to use
 # See https://zmeventnotification.readthedocs.io/en/latest/guides/hooks.html#understanding-detection-configuration
@@ -401,7 +401,7 @@ stream_sequence = {
 ml_sequence= {
 		'general': {
 			'model_sequence': 'object,face,alpr',
-            'disable_locks': '{{disable_locks}}',
+			'disable_locks': '{{disable_locks}}',
 			'match_past_detections': '{{match_past_detections}}',
 			'past_det_max_diff_area': '5%',
 			'car_past_det_max_diff_area': '10%',
@@ -423,7 +423,7 @@ ml_sequence= {
 				'object_framework':'{{tpu_object_framework}}',
 				'tpu_max_processes': {{tpu_max_processes}},
 				'tpu_max_lock_wait': {{tpu_max_lock_wait}},
-                'max_detection_size':'{{max_detection_size}}'
+				'max_detection_size':'{{max_detection_size}}'
 
 				
 			},
@@ -441,28 +441,28 @@ ml_sequence= {
 				'gpu_max_lock_wait': {{gpu_max_lock_wait}},
 				'cpu_max_processes': {{cpu_max_processes}},
 				'cpu_max_lock_wait': {{cpu_max_lock_wait}},
-                'max_detection_size':'{{max_detection_size}}'
+				'max_detection_size':'{{max_detection_size}}'
 
 			}]
 		},
 		'face': {
 			'general':{
-				'pattern': '{{face_detection_pattern}}',
+				'pattern': '{{face_detection_pattern}}',				
 				'same_model_sequence_strategy': 'union' # combines all outputs of this sequence
 			},
 			'sequence': [
 			{
-            'name': 'TPU face detection',
-            'enabled': 'no',
-            'face_detection_framework': 'tpu',
-            'face_weights':'/var/lib/zmeventnotification/models/coral_edgetpu/ssd_mobilenet_v2_face_quant_postprocess_edgetpu.tflite',
-            'face_min_confidence': 0.3,
-          
-        	},
+				'name': 'TPU face detection',
+				'enabled': 'no',
+				'face_detection_framework': 'tpu',
+				'face_weights':'/var/lib/zmeventnotification/models/coral_edgetpu/ssd_mobilenet_v2_face_quant_postprocess_edgetpu.tflite',
+				'face_min_confidence': 0.3,
+			
+			},
 			{
 				'name': 'DLIB based face recognition',
 				'enabled': 'yes',
-				#'pre_existing_labels': ['face'], # use in combination with TPU face det above
+				#'pre_existing_labels': ['face'], # If you use TPU detection first, we can run this ONLY if TPU detects a face first
 				'save_unknown_faces':'{{save_unknown_faces}}',
 				'save_unknown_faces_leeway_pixels':{{save_unknown_faces_leeway_pixels}},
 				'face_detection_framework': '{{face_detection_framework}}',
@@ -497,7 +497,15 @@ ml_sequence= {
 				'platrec_stats': '{{platerec_stats}}',
 				'platerec_min_dscore': {{platerec_min_dscore}},
 				'platerec_min_score': {{platerec_min_score}},
-				'max_size':1600
+				'max_size':1600,
+				#'platerec_payload': {
+                #'regions':['us'],
+                #'camera_id':12,
+				#},
+				#'platerec_config': {
+				#    'region':'strict',
+				#    'mode': 'fast'
+				#}
 			}]
 		}
 	}
